# receipt-chain-core

./: .gitignore  LICENSE  NON-CLAIMS.md  README.md  pyproject.toml  run_demo.py
docs/: COMMIT_GATE_INTEGRATION_SKETCH_v0.1.md  ENTERPRISE_SCENARIO_MATRIX_v0.1.md  PROOF_PACK_v0.1.md  chain-spec.md  invariant.md  observation-condition-receipt.md  prior-state-projector.md  threat-model.md
examples/: 01_single_receipt.py  02_clean_chain_of_three.py  03_tamper_breaks_chain.py  04_recent_refusal_changes_verdict.py  05_unresolved_rebind_blocks_next.py  commit_gate_bridge_demo.py  enterprise_scenario_matrix_demo.py
schemas/: refusal-receipt.schema.json
scripts/: verify_chain_invariants.py
src/receipt_chain_core/: __init__.py  chain.py  hashing.py  projector.py  receipt.py  refusal_receipt.py  standing.py  verdict.py  verifier.py
tests/: conftest.py  test_chain_append_and_verify.py  test_commit_gate_bridge_demo.py  test_prior_state_projector.py  test_refusal_receipt_schema.py  test_refusal_receipt_signature.py  test_replay_suppression.py  test_tamper_detection.py  test_verdict_changes_under_chain_state.py  test_verifier.py
tests/adversarial/: INVARIANT_TEST_VECTORS_v1.json  latest_verification_receipt.json  test_invariants.py
