[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "receipt-chain-core"
version = "0.2.0"
description = "Minimal receipt-chain artifact: prior decision receipts participate in the next admissibility decision."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
signature = ["cryptography>=42.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
